<resources>
    <string name="app_name">Bluetooth Messenger</string>

    <string name="create_new_chat">Create new chat</string>
    <string name="join_chat">Join chat</string>
    <string name="enable_bluetooth">Enable bluetooth</string>
    <string name="language">Choose language</string>

    <string name="problem_unpaired">Devices are unpaired</string>
    <string name="info_unpaired">Pair your devides first</string>

    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="back">Back</string>

    <string name="send">Send</string>
    <string name="write_message">Write message...</string>

    <string name="paired">paired</string>
    <string name="not_paired">not paired</string>

    <string name="loading">Loading...</string>
    <string name="connecting">Connecting with second user</string>
    <string name="cancel">Cancel</string>

    <string name="not_enable">Problem with connection</string>
    <string name="please_enable">Please enable bluetooth first</string>
    <string name="ok">OK</string>

    <string name="quit">Quit</string>
    <string name="sure">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="problem_disconnected">Problem with connection</string>
    <string name="disconnected">You have been disconnected</string>
    <string name="go_to_menu">Go to menu</string>

</resources>
