<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.romek95a.bluetooth.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/bToggleBluetooth"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/bluetooth_image_black"
            android:background="@null"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_chat"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/bJoinChat"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_chat"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/bCreateNewChat"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/bChooseLanguage"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
